; ModuleID = '/home/carl/AnghaBench/ish/tools/extr_unicornomatic.c_uc_unmap.c'
source_filename = "/home/carl/AnghaBench/ish/tools/extr_unicornomatic.c_uc_unmap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PAGE_SIZE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i64, i64)* @uc_unmap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @uc_unmap(i32* %0, i64 %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i64 %1, i64* %5, align 8
  store i64 %2, i64* %6, align 8
  %8 = load i64, i64* %5, align 8
  store i64 %8, i64* %7, align 8
  br label %9

9:                                                ; preds = %20, %3
  %10 = load i64, i64* %7, align 8
  %11 = load i64, i64* %5, align 8
  %12 = load i64, i64* %6, align 8
  %13 = add nsw i64 %11, %12
  %14 = icmp slt i64 %10, %13
  br i1 %14, label %15, label %24

15:                                               ; preds = %9
  %16 = load i32*, i32** %4, align 8
  %17 = load i64, i64* %7, align 8
  %18 = load i64, i64* @PAGE_SIZE, align 8
  %19 = call i32 @uc_mem_unmap(i32* %16, i64 %17, i64 %18)
  br label %20

20:                                               ; preds = %15
  %21 = load i64, i64* @PAGE_SIZE, align 8
  %22 = load i64, i64* %7, align 8
  %23 = add nsw i64 %22, %21
  store i64 %23, i64* %7, align 8
  br label %9

24:                                               ; preds = %9
  ret void
}

declare dso_local i32 @uc_mem_unmap(i32*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
